--- a/class/dddd.html
+++ b/class/dddd.html
@@ -11,18 +11,67 @@
 
 
 
-function bigNum(str) {
+const myShopping = [
+		{ category: "과일", price: 12000　},
+		{ category: "의류", price:10000　 },
+		{ category: "의류", price: 20000　},
+		{ category: "장난감", price: 9000 },
+		{ category: "과일", price: 5000　 },
+		{ category: "의류", price: 10000  },
+		{ category: "과일", price: 8000　　},
+		{ category: "의류", price: 7000　　},
+		{ category: "장난감", price: 5000  },
+		{ category: "의류", price: 10000　 },
+]
 
-let big = 0;
-for (let i = 0; i < str.length; i = i + 1;) {
-if(Number(str[i]) > big ){
-big = Number(str[i])
+
+// 구매 횟수 담는 변수
+
+let count = 0;
+
+// 구매 금액 담는 변수
+
+let price = 0;
+
+//등급 설정 함수
+
+let grade="";
+
+
+
+
+
+for(let i = 0; i < myShopping.length; i = i + 1){
+if (myShopping[i].category == '의류'){
+count = count + 1 
+price = price + myShopping[i].price
+
+
+if(count >= 0 && count <= 7){
+grade = 'bronze'
+}
+
 }
 }
 
+for(let i = 0; i < myShopping.length; i = i + 1){
+if (myShopping[i].category == '과일'){
+count = count + 1 
+price = price + myShopping[i].price
+
+
+if(count >= 0 && count <= 7){
+grade = 'bronze'
+}
+
+}
 }
 
 
+
+
+
+console.log("의류를 구매한 횟수는 총 "+const+'회 금액은')
 
 
     </script>
